# SKNISite

./: .pre-commit-config.yaml  compose.yaml  mise.toml
.github/workflows/: ruff-lint.yml
nginx/: nginx.conf
skni_site_backend/: .gitignore  Dockerfile  manage.py  pyproject.toml
skni_site_backend/SKNISite/: asgi.py  settings.py  urls.py  wsgi.py
skni_site_backend/backend/: admin.py  urls.py
skni_site_backend/backend/migrations/: 0001_initial.py  0002_remove_article_image_remove_articleimage_alt_and_more.py  0003_alter_user_first_name_alter_user_last_name.py  0004_alter_articleimage_article.py
skni_site_backend/backend/models/: News.py  __init__.py  article.py  history_entry.py  news.py  project.py  section.py  sponsor.py  user.py
skni_site_backend/backend/serializers/: __init__.py  article.py  article_image.py  history_entry.py  mixins.py  news.py  project.py  section.py  sponsor.py  user.py
skni_site_backend/backend/utils/: image_utils.py  storage.py
skni_site_backend/backend/views/: __init__.py  article.py  article_image.py  history_entry.py  mixins.py  news.py  project.py  section.py  sponsor.py  user.py
skni_site_backend/scripts/: run
skni_site_backend/tests/: run_all_tests.py  run_login_test.py
skni_site_frontend/: Dockerfile  README.md  global.d.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
skni_site_frontend/messages/: pl.json
skni_site_frontend/src/app/: globals.css  layout.tsx  page.tsx
skni_site_frontend/src/app/(auth)/: layout.tsx
skni_site_frontend/src/app/(home)/: page.tsx
skni_site_frontend/src/app/(public)/: layout.tsx
skni_site_frontend/src/app/articles/: page.tsx
skni_site_frontend/src/app/news/: page.tsx
skni_site_frontend/src/components/: animated-counter.tsx  logo.tsx  section-boilerplate.tsx  theme-provider.tsx  theme-toogle.tsx
skni_site_frontend/src/components/footer/: copyright.tsx  footer-item.tsx  footer.tsx
skni_site_frontend/src/components/infinite-carousel/: container.tsx  index.tsx  infinite-carousel.tsx  item.tsx  track.tsx
skni_site_frontend/src/components/navbar/: logo-link.tsx  navbar.tsx  navlinks.tsx
skni_site_frontend/src/components/ui/: text.tsx  (+1 more)
skni_site_frontend/src/constants/: sampleProjectDetails.ts  timeline.ts
skni_site_frontend/src/i18n/: request.ts
skni_site_frontend/src/interfaces/: project-author.ts  technology.ts  timeline.ts
(+49 files in other folders)
